--- a/src/components/navBar2/NavBar2.css
+++ b/src/components/navBar2/NavBar2.css
@@ -82,6 +82,7 @@
     padding: 15px;
     border-radius: 10px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
+    z-index: 1000;
   }
 
   .navbar-links.open {
